hphp/test/zend/bad/ext-posix/posix_initgroups_basic.php
<?php
echo "Basic test of POSIX posix_initgroups function\n"; 
var_dump(posix_initgroups('foo', 'bar'));
var_dump(posix_initgroups(NULL, NULL));

?>
===DONE====